--- a/project/templates/urlshortener/home.html
+++ b/project/templates/urlshortener/home.html
@@ -11,13 +11,25 @@
       <form action="" method="POST">
         {% csrf_token %}
         <div class="row g-1">
-          <div class="col-10">{{form.long_url}}</div>
-          <div class="col-2">
+          <div class="col-3">{{form.expired_date}}</div>
+          <div class="col-6">{{form.long_url}}</div>
+          <div class="col-3">
             <button class="btn btn-success btn-lg w-100" type="submit">
               Shorten
             </button>
           </div>
         </div>
+        <br><br>
+         {% if user.is_authenticated %}
+        <div class="row g-1">
+          <div class="col-4"></div>
+          <div class="col-4">
+            <a href=""><button class="btn btn-success btn-lg w-100" type="submit">
+              Custom Url
+            </button></a>
+        </div>
+          <div class="col-4"></div>
+          {% endif %}
       </form>
     </div>
   </div>
@@ -32,7 +44,11 @@
   <div class="mx-auto text-center mt-5">
     <h2 class="text-danger">Your shortened Url</h2>
     <p>You can copy the Link below and share it with your friends</p>
-    <p class="">{{new_url}}</p>
+    <input type="url" name="new_url" id="foo" value="{{new_url}}">
+    <button class="btn btn-success btn-md" data-clipboard-target="#foo">Copy Link
+    </button>
+    <br><br>
+    <p><span class="text-danger">Expired Date</span> : {{expired_date}}</p>
     <p><span class="text-danger">Previous URL:</span> {{long_url}}</p>
   </div>
   {% endif %}
